website/i18n/pt-BR/docusaurus-plugin-content-docs/version-3.4.0/cli.mdx
---
description: Docusaurus fornece um conjunto de scripts para ajudá-lo a gerar, servir e implantar seu site.
---

# CLI

Docusaurus fornece um conjunto de scripts para ajudá-lo a gerar, servir e implantar seu site.

Assim que seu site for inicializado, a fonte do site conterá os scripts Docusaurus que você pode invocar com seu gerenciador de pacotes:

```json title="package.json"
{
  // ...
  "scripts": {
    "docusaurus": "docusaurus",
    "start": "docusaurus start",
    "build": "docusaurus build",
    "swizzle": "docusaurus swizzle",
    "deploy": "docusaurus deploy",
    "clear": "docusaurus clear",
    "serve": "docusaurus serve",
    "write-translations": "docusaurus write-translations",
    "write-heading-ids": "docusaurus write-heading-ids"
  }
}
```

## Docusaurus CLI commands {#docusaurus-cli-commands}

Abaixo está uma lista dos comandos do Docusaurus CLI e seus usos:

### `docusaurus start [siteDir]` {#docusaurus-start-sitedir}

Builds and serves a preview of your site locally with [Webpack Dev Server](https://webpack.js.org/configuration/dev-server).

#### Options {#options}

| Nome                          | Padrão      | Descrição                                                                                                                                                                                                                |
| ----------------------------- | ----------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
| `--port`                      | `3000`      | Especifica a porta do servidor de desenvolvimento.                                                                                                                                                                       |
| `--host`                      | `localhost` | Especifique um host a ser usado. For example, if you want your server to be accessible externally, you can use `--host 0.0.0.0`.                                                                                         |
| `--locale`                    |             | Specify site locale to be used.                                                                                                                                                                                          |
| `--hot-only`                  | `false`     | Enables Hot Module Replacement without page refresh as a fallback in case of build failures. More information [here](https://webpack.js.org/configuration/dev-server/#devserverhotonly).                                 |
| `--no-open`                   | `false`     | Do not open the page automatically in the browser.                                                                                                                                                                       |
| `--config`                    | `undefined` | Path to Docusaurus config file, default to `[siteDir]/docusaurus.config.js`                                                                                                                                              |
| `--poll [optionalIntervalMs]` | `false`     | Use a pesquisa de arquivos em vez de observar a recarga ao vivo como uma alternativa em ambientes onde a vigilância não funciona. More information [here](https://webpack.js.org/configuration/watch/#watchoptionspoll). |
| `--no-minify`                 | `false`     | Crie um site sem minimizar os pacotes JS/CSS.                                                                                                                                                                            |

:::info

Por favor note que algumas funcionalidades (por exemplo, links de ancoragem) não funcionarão em desenvolvimento. A funcionalidade irá se comportar conforme o esperado em produção.

:::

:::info Development over network

When forwarding port 3000 from a remote server or VM (e.g. GitHub Codespaces), you can run the dev server on `0.0.0.0` to make it listen on the local IP.

```bash npm2yarn
npm run start -- --host 0.0.0.0
```

:::

#### Enabling HTTPS {#enabling-https}

Existem várias maneiras de obter um certificado. We will use [mkcert](https://github.com/FiloSottile/mkcert) as an example.

1. Run `mkcert localhost` to generate `localhost.pem` + `localhost-key.pem`

2. Run `mkcert -install` to install the cert in your trust store, and restart your browser

3. Inicie o aplicativo com variáveis de ambiente Docusaurus HTTPS:

```bash
HTTPS=true SSL_CRT_FILE=localhost.pem SSL_KEY_FILE=localhost-key.pem yarn start
```

4. Open `https://localhost:3000/`

### `docusaurus build [siteDir]` {#docusaurus-build-sitedir}

Compila seu local para produção.

#### Options {#options-1}

| Nome                | Padrão      | Descrição                                                                                                           |
| ------------------- | ----------- | ------------------------------------------------------------------------------------------------------------------- |
| `--dev`             |             | Builds the website in dev mode, including full React error messages.                                                |
| `--bundle-analyzer` | `false`     | Analyze your bundle with the [webpack bundle analyzer](https://github.com/webpack-contrib/webpack-bundle-analyzer). |
| `--out-dir`         | `build`     | O caminho completo para o novo diretório de saída, relativo ao espaço de trabalho atual.                            |
| `--config`          | `undefined` | Path to Docusaurus config file, default to `[siteDir]/docusaurus.config.js`                                         |
| `--locale`          |             | Build the site in the specified locale. If not specified, all known locales are built.                              |
| `--no-minify`       | `false`     | Crie um site sem minimizar os pacotes JS/CSS.                                                                       |

:::info

For advanced minification of CSS bundle, we use the [advanced cssnano preset](https://github.com/cssnano/cssnano/tree/master/packages/cssnano-preset-advanced) (along with additional several PostCSS plugins) and [level 2 optimization of clean-css](https://github.com/jakubpawlowicz/clean-css#level-2-optimizations). If as a result of this advanced CSS minification you find broken CSS, build your website with the environment variable `USE_SIMPLE_CSS_MINIFIER=true` to minify CSS with the [default cssnano preset](https://github.com/cssnano/cssnano/tree/master/packages/cssnano-preset-default). **Please [fill out an issue](https://github.com/facebook/docusaurus/issues/new?labels=bug%2C+needs+triage&template=bug.md) if you experience CSS minification bugs.**

You can skip the HTML minification with the environment variable `SKIP_HTML_MINIFICATION=true`.

:::

### `docusaurus swizzle [themeName] [componentName] [siteDir]` {#docusaurus-swizzle}

[Swizzle](./swizzling.mdx) a theme component to customize it.

```bash npm2yarn
npm run swizzle [themeName] [componentName] [siteDir]

# Example (leaving out the siteDir to indicate this directory)
npm run swizzle @docusaurus/theme-classic Footer -- --eject
```

The swizzle CLI is interactive and will guide you through the whole [swizzle process](./swizzling.mdx).

#### Options {#options-swizzle}

| Nome            | Descrição                                                                   |
| --------------- | --------------------------------------------------------------------------- |
| `themeName`     | The name of the theme to swizzle from.                                      |
| `componentName` | The name of the theme component to swizzle.                                 |
| `--list`        | Display components available for swizzling                                  |
| `--eject`       | [Eject](./swizzling.mdx#ejecting) the theme component                       |
| `--wrap`        | [Wrap](./swizzling.mdx#wrapping) the theme component                        |
| `--danger`      | Allow immediate swizzling of unsafe components                              |
| `--typescript`  | Swizzle the TypeScript variant component                                    |
| `--config`      | Path to docusaurus config file, default to `[siteDir]/docusaurus.config.js` |

:::warning

Unsafe components have a higher risk of breaking changes due to internal refactorings.

:::

### `docusaurus deploy [siteDir]` {#docusaurus-deploy-sitedir}

Deploys your site with [GitHub Pages](https://pages.github.com/). Check out the docs on [deployment](deployment.mdx#deploying-to-github-pages) for more details.

#### Options {#options-3}

| Nome           | Padrão      | Descrição                                                                                  |
| -------------- | ----------- | ------------------------------------------------------------------------------------------ |
| `--locale`     |             | Deploy the site in the specified locale. If not specified, all known locales are deployed. |
| `--out-dir`    | `build`     | O caminho completo para o novo diretório de saída, relativo ao espaço de trabalho atual.   |
| `--skip-build` | `false`     | Implante o site sem construí-lo. This may be useful when using a custom deploy script.     |
| `--target-dir` | `.`         | Path to the target directory to deploy to.                                                 |
| `--config`     | `undefined` | Path to Docusaurus config file, default to `[siteDir]/docusaurus.config.js`                |

### `docusaurus serve [siteDir]` {#docusaurus-serve-sitedir}

Disponibilize o site construído localmente.

| Nome        | Padrão                        | Descrição                                                                                                                        |
| ----------- | ----------------------------- | -------------------------------------------------------------------------------------------------------------------------------- |
| `--port`    | `3000`                        | Usar porta especificada                                                                                                          |
| `--dir`     | `build`                       | O caminho completo para o diretório de saída, relativo ao espaço de trabalho atual                                               |
| `--build`   | `false`                       | Crie um site antes de servir                                                                                                     |
| `--config`  | `undefined`                   | Path to Docusaurus config file, default to `[siteDir]/docusaurus.config.js`                                                      |
| `--host`    | `localhost`                   | Especifique um host a ser usado. For example, if you want your server to be accessible externally, you can use `--host 0.0.0.0`. |
| `--no-open` | `false` locally, `true` in CI | Do not open a browser window to the server location.                                                                             |

### `docusaurus clear [siteDir]` {#docusaurus-clear-sitedir}

Limpe os assets gerados pelo site do Docusaurus. Caches e artefatos de construção.

Recomendamos executar esse comando antes de relatar bugs, depois de atualizar versões ou a qualquer momento que você tenha problemas com o seu site Docusaurus.

### `docusaurus write-translations [siteDir]` {#docusaurus-write-translations-sitedir}

Escreva os arquivos de tradução JSON que você terá que traduzir.

By default, the files are written in `website/i18n/<defaultLocale>/...`.

| Nome              | Padrão            | Descrição                                                                                                  |
| ----------------- | ----------------- | ---------------------------------------------------------------------------------------------------------- |
| `--locale`        | `<defaultLocale>` | Defina em qual pasta de localização você deseja escrever as traduções dos arquivos JSON                    |
| `--override`      | `false`           | Substituir as mensagens de tradução existentes                                                             |
| `--config`        | `undefined`       | Path to Docusaurus config file, default to `[siteDir]/docusaurus.config.js`                                |
| `--messagePrefix` | `''`              | Permite adicionar um prefixo para cada mensagem de tradução, para ajudar a destacar strings não traduzidas |

### `docusaurus write-heading-ids [siteDir] [files]` {#docusaurus-write-heading-ids-sitedir}

Add [explicit heading IDs](./guides/markdown-features/markdown-features-toc.mdx#heading-ids) to the Markdown documents of your site.

| Nome              | Padrão                       | Descrição                                                |
| ----------------- | ---------------------------- | -------------------------------------------------------- |
| `files`           | All MD files used by plugins | The files that you want heading IDs to be written to.    |
| `--maintain-case` | `false`                      | Keep the headings' casing, otherwise make all lowercase. |
| `--overwrite`     | `false`                      | Overwrite existing heading IDs.                          |
